# resound

./: README.md  resound-gui-launch.sh  resound-server-ssh.sh  resound_server_start.sh  resound_server_stop.sh
docs/: CONTENTS.txt  bitstream_3x_preset.bs3  check_wx_and_resound_paths.sh  flexmix_uml.xmi  gittest.txt  license_to_paste.txt  pdsendosctoresound.pd  resound_saffire_pro_patch.sfpro  resoundnv-draft-schema.xsd  resoundnv-draft-xml-example.xml  resoundnv-schema.xsd  resoundnv-xml-spec-2.xml  test.txt
resoundnv/: CMakeLists.txt
resoundnv/docs/: design.dia  notes.txt
resoundnv/src/: CMakeLists.txt  audiostream.cpp  audiostream.hpp  core_behaviours.cpp  core_behaviours.hpp  core_objects.cpp  core_objects.hpp  dynamicobject.cpp  dynamicobject.hpp  engine.cpp  engine.hpp  init.xml  jackengine.cpp  jackengine.hpp  main.cpp  main.hpp  oscmanager.cpp  oscmanager.hpp  ugen.cpp  ugen.hpp  ugen_att.cpp  ugen_att.hpp
resoundnv/webclient/: index.php  install
src/: CMakeLists.txt  create_version_string_header.sh
src/libresound_client/: CMakeLists.txt  amclient.cpp  automation.cpp  basebehaviour.cpp  behaviour.cpp  mmanager.cpp  mmanager_alsa.cpp  mmanagerwin32.cpp  performance.cpp  pvar.cpp  resoundclient.cpp
src/libresound_client/libresound/: automation.h  mmanagerwin32.h
src/libresound_client/resound_client/: amclient.h  automation.h  basebehaviour.h  behaviour.h  mmanager.h  pch.h  performance.h  pvar.h  resoundclient.h  util.h
src/resound_common/: CMakeLists.txt  array2.h  audio_math.h  comms.cpp  comms.h  exception.h  osc_manager.cpp  osc_manager.h  systemlog.cpp  systemlog.h  verbose.cpp  verbose.h
src/resound_gui/: CMakeLists.txt  amclient.cpp  amclient.h  amclient_widgets.cpp  amclient_widgets.h  app.cpp  app.h  automation.cpp  automation.h  base.cpp  base.h  basebehaviour.cpp  basebehaviour.h  behaviour.cpp  behaviour.h  behaviourview.cpp  behaviourview.h  coherency.cpp  coherency.h  faderwidget.cpp  faderwidget.h  masterfader.cpp  masterfader.h  mmanager.cpp  mmanager.h  mmanager_alsa.cpp  mmanager_alsa.h  mmanagerwin32.cpp  monitorframe.cpp  monitorframe.h  monitornodewidget.cpp  monitornodewidget.h  monitorview.cpp  monitorview.h  pch.h  performance.cpp  performance.h  performanceview.cpp  performanceview.h  pvar.cpp  (+11 more)
src/resound_gui/libresound/: amclient.cpp  pvar.cpp
src/resound_gui/libresound/libresound/: mmanager.h  performance.h  pvar.h
src/resound_server/: CMakeLists.txt  amserver.cpp  amserver.h  audio_buffer.cpp  audio_buffer.h  dsp.h  dsp_manager.cpp  dsp_manager.h  pch.h  resound_server.cpp  server_base.cpp  server_base.h
